// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberElement renders correctly 1`] = `
.c0 {
  -webkit-transition: -webkit-transform 100ms ease-out;
  -webkit-transition: transform 100ms ease-out;
  transition: transform 100ms ease-out;
}

.c0:hover {
  -webkit-transform: translateY(-1rem);
  -ms-transform: translateY(-1rem);
  transform: translateY(-1rem);
}

.c0:hover::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: -1rem;
  z-index: -1;
}

.c1 {
  background-color: #4f4f4f;
  color: white;
  font-size: 0;
  text-align: center;
}

.c2 {
  display: block;
  height: 100%;
  overflow: hidden;
}

<div
  className="c0 c1"
  style={
    Object {
      "fontSize": "0px",
      "height": "80%",
    }
  }
>
  <span
    className="c2"
  >
    4
  </span>
</div>
`;

exports[`NumberElement renders correctly 2`] = `
.c0 {
  -webkit-transition: -webkit-transform 100ms ease-out;
  -webkit-transition: transform 100ms ease-out;
  transition: transform 100ms ease-out;
}

.c0:hover {
  -webkit-transform: translateY(-1rem);
  -ms-transform: translateY(-1rem);
  transform: translateY(-1rem);
}

.c0:hover::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: -1rem;
  z-index: -1;
}

.c1 {
  background-color: #4f4f4f;
  color: white;
  font-size: 0;
  text-align: center;
}

.c2 {
  display: block;
  height: 100%;
  overflow: hidden;
}

<div
  className="c0 c1"
  style={
    Object {
      "fontSize": "0px",
      "height": "40%",
    }
  }
>
  <span
    className="c2"
  >
    2
  </span>
</div>
`;

exports[`NumberElement renders correctly 3`] = `
.c0 {
  -webkit-transition: -webkit-transform 100ms ease-out;
  -webkit-transition: transform 100ms ease-out;
  transition: transform 100ms ease-out;
}

.c0:hover {
  -webkit-transform: translateY(-1rem);
  -ms-transform: translateY(-1rem);
  transform: translateY(-1rem);
}

.c0:hover::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: -1rem;
  z-index: -1;
}

.c1 {
  background-color: #4f4f4f;
  color: white;
  font-size: 0;
  text-align: center;
}

.c2 {
  display: block;
  height: 100%;
  overflow: hidden;
}

<div
  className="c0 c1"
  style={
    Object {
      "fontSize": "0px",
      "height": "100%",
    }
  }
>
  <span
    className="c2"
  >
    5
  </span>
</div>
`;

exports[`NumberElement renders correctly 4`] = `
.c0 {
  -webkit-transition: -webkit-transform 100ms ease-out;
  -webkit-transition: transform 100ms ease-out;
  transition: transform 100ms ease-out;
}

.c0:hover {
  -webkit-transform: translateY(-1rem);
  -ms-transform: translateY(-1rem);
  transform: translateY(-1rem);
}

.c0:hover::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: -1rem;
  z-index: -1;
}

.c1 {
  background-color: #4f4f4f;
  color: white;
  font-size: 0;
  text-align: center;
}

.c2 {
  display: block;
  height: 100%;
  overflow: hidden;
}

<div
  className="c0 c1"
  style={
    Object {
      "fontSize": "0px",
      "height": "20%",
    }
  }
>
  <span
    className="c2"
  >
    1
  </span>
</div>
`;

exports[`NumberElement renders correctly 5`] = `
.c0 {
  -webkit-transition: -webkit-transform 100ms ease-out;
  -webkit-transition: transform 100ms ease-out;
  transition: transform 100ms ease-out;
}

.c0:hover {
  -webkit-transform: translateY(-1rem);
  -ms-transform: translateY(-1rem);
  transform: translateY(-1rem);
}

.c0:hover::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: -1rem;
  z-index: -1;
}

.c1 {
  background-color: #4f4f4f;
  color: white;
  font-size: 0;
  text-align: center;
}

.c2 {
  display: block;
  height: 100%;
  overflow: hidden;
}

<div
  className="c0 c1"
  style={
    Object {
      "fontSize": "0px",
      "height": "60%",
    }
  }
>
  <span
    className="c2"
  >
    3
  </span>
</div>
`;
